--- a/practice.html
+++ b/practice.html
@@ -20,5 +20,13 @@
       <a href="#">Contact Us</a>
       <a href="#">Links</a>
     </nav>
+    <div class="ball-container"></div>
+    <p class="sliding-text">
+      Far quitting dwelling graceful the likewise received building. An fact so
+      to that show am shed sold cold. Unaffected remarkably get yet introduced
+      excellence terminated led. Result either design saw she esteem and. On
+      ashamed no inhabit ferrars it ye besides resolve.
+    </p>
+    <button class="hover-btn">nerf THIS!</button>
   </body>
 </html>
